Version 1.7.13+svn:
 * AI:
   * Allow to write AI components in LUA
 * Graphics:
   * Fixed bug 15344: missing ice to nothing transition
   * Fixed weird side effect of long first frame in standing anims
   * Fix bug 15366 : overlay terrains badly interacting with submerge and height adjustments
 * Language and i18n:
   * Updated translations: Czech, Italian, Polish
 * Multiplayer
   * Fixed players getting different side colours across scenarios of mp
     campaigns
   * Fixed bug 14754: Host can start game before the client has selected a
     leader (Debian bug #555964)

Version 1.7.13-1.8beta6:
 * AI:
   * Port [protect_leader], [protect_unit], [protect_location] to new-style ai
     config, which is a goal with name=protect, which accepts a SLF [criteria].
   * Changed names of AI log domains, to have a more uniform naming style.
     Most names became shorter.
 * Campaigns:
   * Fixed a bug in several scenarios causing some enemy units to disappear when
     loading a save
 * Engine:
   * Fix bug #15146: made kill event with animate="yes" recheck the presence of
     unit before animating, fixing the assertion failure (in case the unit is
     removed by other wml events like last breath)
   * All unit-related images are team colored, this includes missiles and haloes
 * Graphics:
   * Add and wire two new Drake attack icons.
 * Language and i18n:
   * Updated translations: Czech, Finnish, French, German, Hungarian, Italian,
     Lithuanian, Polish, Portuguese (Brazil), Russian, Serbian
   * The manual now does support translations of alternative texts for images
     (bug #14874)
 * Multiplayer
   * An early test version of the multiplayer port of "Legend of Wesmere" 
     is available when starting wesnoth with the commandline argument "--debug"
 * User interface:
   * Add a new tree view widget
   * Use tree view widget as test in campaign dialog (needs --new-widgets)
   * Use tree view widget in the lobby
 * Miscellaneous and bugfixes: