@@ -1,3 +1,8 @@
+Animated water branch
+ * added animated ocean base tile+beaches(partial)
+ * animated terrain animations are not synchronized anymore
+
+
 Version 1.7.13+svn:
  * AI:
    * Allow to write AI components in LUA
